--- a/coment.html
+++ b/coment.html
@@ -34,7 +34,7 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
+<div class="top"><img src="images/come.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
 <div class="fb-comments" data-href="https://arcodeltiempo.github.io/Arcodeltiempo/Qs.html" data-width="480" data-numposts="3"></div>
 <center>
