--- a/localizacion.html
+++ b/localizacion.html
@@ -5,6 +5,7 @@
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 
+
 <body>
 <div class="bg">
 <div id="header">
@@ -25,12 +26,15 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
+<div class="top"><img src="images/cintalapa.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
+</div>
+<h2 align="justify">Arco Del Tiempo </h2>
+<h3 align="justify">Ubicado a dos horas de distancia de la Colonia Agrícola y Ganadera Lázaro Cárdenas, Mpio. De Cintalapa Chiapas<br></br></h3>
+<br></br>
 <center>
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15266.688389038512!2d-93.7331786!3d16.9414594!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5f173c5be0d511b6!2sArco+Del+Tiempo!5e0!3m2!1ses!2smx!4v1510428372397" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-
-</p>
+<br></br><br></br>
 </ul>
 </div>
 </div>
