--- a/localizacion.html
+++ b/localizacion.html
@@ -26,7 +26,7 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/cintalapa.jpg" alt="" height="180" width="460" /></div>
+<div class="top"><img src="images/Cintalapa.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
 </div>
 <h2 align="justify">Arco Del Tiempo </h2>
