--- a/coment.html
+++ b/coment.html
@@ -18,7 +18,7 @@
 <div class="bg">
 <div id="header">
 <div id="logo">
-<h1><a href="#">El Arco Del Tiempo</a></h1>
+<h1><a href="index.html">El Arco Del Tiempo</a></h1>
 <h2><a href="#">Cintalapa, Chiapas</a></h2>
 </div>
 <div id="menu">
@@ -36,7 +36,7 @@
 <div id="splash">
 <div class="top"><img src="images/come.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
-<div class="fb-comments" data-href="https://arcodeltiempo.github.io/Arcodeltiempo/Qs.html" data-width="480" data-numposts="5"></div>
+<div class="fb-comments" data-href="https://arcodeltiempo.github.io/Arcodeltiempo/Qs.html" data-width="480" data-numposts="3"></div>
 <center>
 
     
