--- a/antecedente.html
+++ b/antecedente.html
@@ -10,8 +10,8 @@
 <div class="bg">
 <div id="header">
 <div id="logo">
-<h1><a href="#">El Arco Del Tiempo</a></h1>
-<h2><a href="#">Cintalapa, Chiapas</a></h2>
+<h1><a href="index.html">El Arco Del Tiempo</a></h1>
+<h2>Cintalapa, Chiapas</h2>
 </div>
 <div id="menu">
 <ul>
