--- a/coment.html
+++ b/coment.html
@@ -19,7 +19,7 @@
 <div id="header">
 <div id="logo">
 <h1><a href="index.html">El Arco Del Tiempo</a></h1>
-<h2><a href="#">Cintalapa, Chiapas</a></h2>
+<h2>Cintalapa, Chiapas</h2>
 </div>
 <div id="menu">
 <ul>
