--- a/Qs.html
+++ b/Qs.html
@@ -27,6 +27,33 @@
 <div id="splash">
 <div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
+  <h4> Andrik Daniel Pérez Vázquez <br> </br>
+
+Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
+<br> </br>
+Jhovanny Sorrosa Arávalo 
+  <br> </br>
+Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
+<br> </br>
+Bryan de Jesús Rodríguez Vázquez
+  <br> </br>
+Creímos que seria buena idea realizar una pagina publicitaria para dicha atracción turística para que la gente de todo el mundo conozca el lugar llamado Arco del Tiempo.
+  <br> </br>
+
+Angel Antonio Vassallo Velázquez
+  <br> </br>
+  
+Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
+  <br> </br>
+
+Erwin Ulises Velasco Fonseca
+  <br> </br>
+
+Al finalizar todo el proceso de este proyecto pudimos terminar con éxito lo que nos propusimos, que damos dar a conocer el arco del tiempo, desde  donde se encuentra, dar información de este lugar  y nos llevamos la vivencia de haber experimentado con algo muy común que pasa a nuestro alrededor. Fuimos acorde al tiempo planificado, el tiempo obtenido lo ocupamos en todo lo expuesto anteriormente.
+
+  <br> </br>
+<h4/>
+
 <center>
 
 </div>
