--- a/Qs.html
+++ b/Qs.html
@@ -27,7 +27,9 @@
 <div id="splash">
 <div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
-  <h4> Andrik Daniel Pérez Vázquez <br> </br>
+  <h4> 
+      <br> </br>  <br> </br>
+Andrik Daniel Pérez Vázquez <br> </br>
 
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
 <br> </br>
@@ -52,7 +54,7 @@ Erwin Ulises Velasco Fonseca
 Al finalizar todo el proceso de este proyecto pudimos terminar con éxito lo que nos propusimos, que damos dar a conocer el arco del tiempo, desde  donde se encuentra, dar información de este lugar  y nos llevamos la vivencia de haber experimentado con algo muy común que pasa a nuestro alrededor. Fuimos acorde al tiempo planificado, el tiempo obtenido lo ocupamos en todo lo expuesto anteriormente.
 <br> </br>  <br> </br>
 <h4/>
-<p>   <br> </br>  <br> </br> </p>
+
 
 
 <center>
