--- a/Qs.html
+++ b/Qs.html
@@ -28,8 +28,9 @@
 <div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
 <div class="bottom"></div>
   <h4> 
-      <br> </br>  <br> </br>
-Andrik Daniel Pérez Vázquez <br> </br>
+      <br> </br> 
+  
+Andrik Daniel Pérez Vázquez 
 
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
 <br> </br>
@@ -52,10 +53,8 @@ Erwin Ulises Velasco Fonseca
   <br> </br>
 
 Al finalizar todo el proceso de este proyecto pudimos terminar con éxito lo que nos propusimos, que damos dar a conocer el arco del tiempo, desde  donde se encuentra, dar información de este lugar  y nos llevamos la vivencia de haber experimentado con algo muy común que pasa a nuestro alrededor. Fuimos acorde al tiempo planificado, el tiempo obtenido lo ocupamos en todo lo expuesto anteriormente.
-<br> </br>  <br> </br>
+<br> </br> 
 <h4/>
-
-
 
 <center>
 
