--- a/Qs.html
+++ b/Qs.html
@@ -25,7 +25,7 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/img07.jpg" alt="" height="180" width="460" /></div>
+<div class="top"><img src="images/angel.jpg" alt="" height="300" width="600" /></div>
 <div class="bottom"></div>
   <h4> 
     <br> </br> 
