--- a/Qs.html
+++ b/Qs.html
@@ -13,7 +13,6 @@
 <h2>Cintalapa, Chiapas</h2>
 </div>
 <div id="menu">
-  
 <ul>
 <li><a href="index.html" accesskey="1" title="">Inicio</a></li>
 <li><a href="antecedente.html"  accesskey="2" title="">Antecedentes</a></li>
@@ -26,11 +25,10 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/Angel.jpg" alt="" height="180" width="360" /></div>
+<img src="images/Angel.jpg" alt="" height="180" width="360" />
 <div class="bottom"></div>
   <h4> 
     <br> </br> 
-  
 Andrik Daniel Pérez Vázquez 
     <br> </br>
 
