--- a/Qs.html
+++ b/Qs.html
@@ -25,7 +25,7 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<img src="images/Angel.jpg" alt="" height="180" width="360" />
+<div class="top"><img src="images/Angel.jpg" alt="" height="180" width="360" />
 <div class="bottom"></div>
   <h4> 
     <br> </br> 
