--- a/Qs.html
+++ b/Qs.html
@@ -25,18 +25,27 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-<div class="top"><img src="images/Angel.jpg" alt="" height="180" width="360" />
-<div class="bottom"></div>
-  <h4> 
-    <br> </br> 
+  <div><img src="images/Andrik.jpg" alt="" height="180" width="360" /></div>
+  <h4 aligin="justify">
+  <br> </br> 
 Andrik Daniel Pérez Vázquez 
     <br> </br>
-
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
+  </h4>
+  
+  <div><img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/> </div>
+  <h4 aligin="justify">
+  <br> </br> 
+Jhovanny Sorrosa Arevalo
+    <br> </br>
+Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
+  </h4>
+  
+   
 <br> </br>
 Jhovanny Sorrosa Arávalo 
   <br> </br>
-Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
+
 <br> </br>
 Bryan de Jesús Rodríguez Vázquez
   <br> </br>
