--- a/Qs.html
+++ b/Qs.html
@@ -25,7 +25,7 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
-  <div><img src="images/Andrik.jpg" alt="" height="180" width="360" /></div>
+  <div class="top"><img src="images/Andrik.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Andrik Daniel Pérez Vázquez 
@@ -33,7 +33,7 @@ Andrik Daniel Pérez Vázquez
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
   </h4>
   
-  <div><img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/> </div>
+  <img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/>
   <h4 aligin="justify">
   <br> </br> 
 Jhovanny Sorrosa Arevalo
@@ -41,30 +41,35 @@ Jhovanny Sorrosa Arevalo
 Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
   </h4>
   
-   
-<br> </br>
-Jhovanny Sorrosa Arávalo 
-  <br> </br>
-
-<br> </br>
+  <img src"images/Bryan.jpg" alt="" heigth="180" width="360"/> 
+  <h4 aligin="justify">
+  <br> </br> 
 Bryan de Jesús Rodríguez Vázquez
-  <br> </br>
+    <br> </br>
 Creímos que seria buena idea realizar una pagina publicitaria para dicha atracción turística para que la gente de todo el mundo conozca el lugar llamado Arco del Tiempo.
-  <br> </br>
+  </h4>
 
+  <img src"images/Angel.jpg" alt="" heigth="180" width="360"/>
+  <h4 aligin="justify">
+  <br> </br> 
 Angel Antonio Vassallo Velázquez
-  <br> </br>
-  
+    <br> </br>
 Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
-  <br> </br>
-
-Erwin Ulises Velasco Fonseca
-  <br> </br>
-
+  </h4>
+  <img src"images/Angel.jpg" alt="" heigth="180" width="360"/>
+  <h4 aligin="justify">
+  <br> </br> 
+Angel Antonio Vassallo Velázquez
+    <br> </br>
+Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
+  </h4>
+  <div><img src"images/Erwin.jpg" alt="" heigth="180" width="360"/> </div>
+  <h4 aligin="justify">
+  <br> </br> 
+Angel Antonio Vassallo Velázquez
+    <br> </br>
 Al finalizar todo el proceso de este proyecto pudimos terminar con éxito lo que nos propusimos, que damos dar a conocer el arco del tiempo, desde  donde se encuentra, dar información de este lugar  y nos llevamos la vivencia de haber experimentado con algo muy común que pasa a nuestro alrededor. Fuimos acorde al tiempo planificado, el tiempo obtenido lo ocupamos en todo lo expuesto anteriormente.
-<br> </br> 
-<h4/>
-
+  </h4>
 <center>
 
 </div>
