--- a/Qs.html
+++ b/Qs.html
@@ -56,17 +56,11 @@ Angel Antonio Vassallo Velázquez
     <br> </br>
 Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
   </h4>
-  <img src"images/Angel.jpg" alt="" heigth="180" width="360"/>
-  <h4 aligin="justify">
-  <br> </br> 
-Angel Antonio Vassallo Velázquez
-    <br> </br>
-Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
-  </h4>
+
   <div><img src"images/Erwin.jpg" alt="" heigth="180" width="360"/> </div>
   <h4 aligin="justify">
   <br> </br> 
-Angel Antonio Vassallo Velázquez
+Erwin Ulises Velasco Fonseca
     <br> </br>
 Al finalizar todo el proceso de este proyecto pudimos terminar con éxito lo que nos propusimos, que damos dar a conocer el arco del tiempo, desde  donde se encuentra, dar información de este lugar  y nos llevamos la vivencia de haber experimentado con algo muy común que pasa a nuestro alrededor. Fuimos acorde al tiempo planificado, el tiempo obtenido lo ocupamos en todo lo expuesto anteriormente.
   </h4>
