--- a/Qs.html
+++ b/Qs.html
@@ -33,7 +33,7 @@ Andrik Daniel Pérez Vázquez
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
   </h4>
   
-  <img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/>
+ <div> <img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/></div>
   <h4 aligin="justify">
   <br> </br> 
 Jhovanny Sorrosa Arevalo
@@ -41,7 +41,7 @@ Jhovanny Sorrosa Arevalo
 Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
   </h4>
   
-  <img src"images/Bryan.jpg" alt="" heigth="180" width="360"/> 
+  <div><img src"images/Bryan.jpg" alt="" heigth="180" width="360"/> </div>
   <h4 aligin="justify">
   <br> </br> 
 Bryan de Jesús Rodríguez Vázquez
@@ -49,7 +49,7 @@ Bryan de Jesús Rodríguez Vázquez
 Creímos que seria buena idea realizar una pagina publicitaria para dicha atracción turística para que la gente de todo el mundo conozca el lugar llamado Arco del Tiempo.
   </h4>
 
-  <img src"images/Angel.jpg" alt="" heigth="180" width="360"/>
+  <div><img src"images/Angel.jpg" alt="" heigth="180" width="360"/></div>
   <h4 aligin="justify">
   <br> </br> 
 Angel Antonio Vassallo Velázquez
