--- a/Qs.html
+++ b/Qs.html
@@ -25,6 +25,9 @@
 <div id="wrapper">
 <div id="content">
 <div id="splash">
+
+  
+  
   <div class="top"><img src="images/Andrik.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
@@ -32,32 +35,31 @@ Andrik Daniel Pérez Vázquez
     <br> </br>
 Consideramos una buena estrategia el realizar una página publicitaria dando a conocer lugares turísticos de nuestra entidad y al mismo tiempo desarrollamos nuestras habilidades en cuanto a diseño y programación. 
   </h4>
-  
- <div> <img src"images/Jhovanny.jpg" alt="" heigth="180" width="360"/></div>
+    <br> </br> 
+ <div class="top"><img src="images/Jhovanny.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Jhovanny Sorrosa Arevalo
     <br> </br>
 Realizamos una pagina web para poder promover este sitio turístico llamado “El Arco Del Tiempo” ya que nos dimos cuenta que este lugar no era tan conocido como podía ser, ya que es una maravilla natural  del estado de Chiapas.
   </h4>
-  
-  <div><img src"images/Bryan.jpg" alt="" heigth="180" width="360"/> </div>
+    <br> </br> 
+  <div class="top"><img src="images/Bryan.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Bryan de Jesús Rodríguez Vázquez
     <br> </br>
 Creímos que seria buena idea realizar una pagina publicitaria para dicha atracción turística para que la gente de todo el mundo conozca el lugar llamado Arco del Tiempo.
   </h4>
-
-  <div><img src"images/Angel.jpg" alt="" heigth="180" width="360"/></div>
+  <br> </br> 
+  <div class="top"><img src="images/Angel.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Angel Antonio Vassallo Velázquez
     <br> </br>
 Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
-  </h4>
-
-  <div><img src"images/Erwin.jpg" alt="" heigth="180" width="360"/> </div>
+ 
+<div class="top"><img src="images/Erwinjpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Erwin Ulises Velasco Fonseca
