--- a/Qs.html
+++ b/Qs.html
@@ -58,7 +58,7 @@ Angel Antonio Vassallo Velázquez
     <br> </br>
 Esta pagina tiene de objetivo que las personas ajenas a nuestro estado conozcan la atracción turística y llegue a pasar la información para que mas personas la conozcan.
  
-<div class="top"><img src="images/Erwinjpg" alt="" height="180" width="360" /></div>
+<div class="top"><img src="images/Erwin.jpg" alt="" height="180" width="360" /></div>
   <h4 aligin="justify">
   <br> </br> 
 Erwin Ulises Velasco Fonseca
